--- a/sd.html
+++ b/sd.html
@@ -8,6 +8,7 @@
     <!-- Visualization & Content Choices: The primary "quantitative" data from the report (e.g., "$500,000/year cost of ambiguity") is best presented as a high-impact "Key Stat" callout. The core of the application is turning the text-heavy lesson plans into an interactive experience using a modal-based, tabbed interface for the course details (Goal: Organize/Inform, Method: JS-powered dynamic content display). The `dina_framework_map` is transformed from a static table into an interactive, filterable grid, allowing users to compare applications across roles (Goal: Compare/Organize, Method: JS-powered filtering). All diagrams and structures are built with HTML/CSS. -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <title>Strategic Dialogue™ Professional Development</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -25,7 +26,6 @@
             }
         }
     </script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -377,7 +377,7 @@
                 { role: 'leadership', title: 'Team Alignment', description: 'Use the framework to align teams with competing priorities around a shared Strategic Intent.' },
                 { role: 'leadership', title: 'Delegation', description: 'Delegate tasks with a clear Actionable Step, ensuring full accountability and flawless execution.' },
                 { role: 'sales', title: 'Client Negotiations', description: 'Present objective market data and explain the business impact of your proposed solution to justify terms.' },
-                { role: 'sales', title: 'Needs Discovery', description: 'Quote a client's own words to align your intent with their strategic goals, building deep trust.' },
+                { role: 'sales', title: 'Needs Discovery', description: "Quote a client's own words to align your intent with their strategic goals, building deep trust." },
                 { role: 'sales', title: 'Closing Deals', description: 'Define a clear, compelling "next step" for the client to move the sales process forward decisively.' },
                 { role: 'technical', title: 'Code & Peer Review', description: 'Cite specific, objective technical details and state a positive intent to strengthen the code and share knowledge, not criticize.' },
                 { role: 'technical', title: 'Project Meetings', description: 'Agree on specific follow-ups, owners, and deadlines to ensure every meeting ends with an actionable plan.' },
