Update index and sd

--- a/sd.html
+++ b/sd.html
@@ -200,13 +200,13 @@
                     </div>
                     <div class="border border-slate-200 rounded-xl p-8 flex flex-col">
                         <h3 class="text-sm font-semibold text-brand-primary uppercase">LEADERSHIP</h3>
-                        <p class="text-2xl font-bold text-slate-900 mt-2">SD 201: Strategic Dialogue™ for Leadership</p>
+                        <p class="text-2xl font-bold text-slate-900 mt-2">SD 201: Strategic Dialogue™ for Leaders</p>
                         <p class="mt-4 text-slate-600 flex-grow">Equips managers and leaders with advanced applications of DISA™ for performance management, team alignment, conflict mediation, and leading organizational change.</p>
                         <button data-course="sd201" class="open-modal-button mt-8 w-full bg-brand-primary text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
                     </div>
                     <div class="border border-slate-200 rounded-xl p-8 flex flex-col">
                         <h3 class="text-sm font-semibold text-brand-primary uppercase">MASTERY</h3>
-                        <p class="text-2xl font-bold text-slate-900 mt-2">SD 301: Coach & Facilitator</p>
+                        <p class="text-2xl font-bold text-slate-900 mt-2">SD 301: Strategic Dialogue™ for Coach & Facilitator</p>
                         <p class="mt-4 text-slate-600 flex-grow">A two-day intensive for senior leaders and HR partners to become internal champions, capable of coaching others and facilitating the most complex, high-stakes conversations.</p>
                         <button data-course="sd301" class="open-modal-button mt-8 w-full bg-brand-primary text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
                     </div>
