--- a/index.html
+++ b/index.html
@@ -167,19 +167,44 @@
         </div>
     </section>
     
-        <!-- Programs Section -->
-        <section id="programs" class="py-20 swoosh-bg">
-            <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Leadership Development Program</h2>
-                <div class="max-w-2xl mx-auto">
-                    <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">The Performance Dialogue Series</h3>
-                        <p class="text-gray-600 mb-6 flex-grow">Driving results through Accountable Communication. Transform difficult conversations into catalysts for performance and equip your leaders with a structured, repeatable process to foster a culture of trust, ownership, and relentless improvement.</p>
-                        <a href="ac.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
-                    </div>
+    <!-- Programs Section -->
+    <section id="programs" class="py-20 swoosh-bg">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold text-center text-gray-900 mb-4">Program Pathways</h2>
+            <p class="text-center text-lg text-gray-600 max-w-3xl mx-auto mb-12">
+                Our modular curriculum is designed to build communication mastery across your entire organization, from foundational skills to advanced leadership coaching.
+            </p>
+            <div class="grid lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
+                <!-- SD 101: Foundations -->
+                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
+                    <h3 class="text-sm font-semibold text-indigo-600 uppercase">FOUNDATIONS</h3>
+                    <p class="text-2xl font-bold text-gray-900 mt-2">SD 101: Strategic Dialogue™ Foundations</p>
+                    <p class="mt-4 text-gray-600 flex-grow">The essential starting point for all employees. This workshop establishes a universal language for clear, objective, and productive communication using the <strong>DISA™ Framework</strong>.</p>
+                    <!-- Update href="#" to your desired link -->
+                    <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                </div>
+
+                <!-- SD 201: Leadership -->
+                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
+                    <h3 class="text-sm font-semibold text-indigo-600 uppercase">LEADERSHIP</h3>
+                    <p class="text-2xl font-bold text-gray-900 mt-2">SD 201: Strategic Dialogue™ for Leaders</p>
+                    <p class="mt-4 text-gray-600 flex-grow">Equips managers and leaders with advanced applications of DISA™ for performance management, team alignment, conflict mediation, and leading organizational change.</p>
+                    <!-- Update href="#" to your desired link -->
+                    <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                </div>
+
+                <!-- SD 301: Mastery -->
+                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
+                    <h3 class="text-sm font-semibold text-indigo-600 uppercase">MASTERY</h3>
+                    <p class="text-2xl font-bold text-gray-900 mt-2">SD 301: Strategic Dialogue™ for Coach & Facilitator</p>
+                    <p class="mt-4 text-gray-600 flex-grow">A two-day intensive for senior leaders and HR partners to become internal champions, capable of coaching others and facilitating the most complex, high-stakes conversations.</p>
+                    <!-- Update href="#" to your desired link -->
+                    <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+
 
     <section id="tools" class="py-20 bg-white">
     <div class="container mx-auto px-6">
