--- a/sd.html
+++ b/sd.html
@@ -82,7 +82,7 @@
                 <a href="#programs" class="text-slate-600 hover:text-brand-primary transition-colors">Programs</a>
                 <a href="#contact" class="text-slate-600 hover:text-brand-primary transition-colors">Contact</a>
             </nav>
-            <a href="#contact" class="hidden md:inline-block bg-indigo-800 text-white font-semibold px-5 py-2 rounded-lg hover:bg-brand-secondary transition-all shadow-sm">
+            <a href="#contact" class="hidden md:inline-block bg-indigo-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-brand-secondary transition-all shadow-sm">
                 Request Consultation
             </a>
             <button id="mobile-menu-button" class="md:hidden text-slate-800">
@@ -244,7 +244,7 @@
                         Let's discuss how the Strategic Dialogue™ program can be tailored to your organization's specific goals. Schedule a complimentary consultation with our team today.
                     </p>
                     <div class="mt-12">
-                        <a href="https://wa.me/message/DTN4ST4TTRBWG1" target="_blank" rel="noopener noreferrer" class="inline-block bg-brand-primary text-white font-semibold px-8 py-4 rounded-md hover:bg-brand-secondary transition-all text-lg shadow-lg">
+                        <a href="https://wa.me/message/DTN4ST4TTRBWG1" target="_blank" rel="noopener noreferrer" class="inline-block bg-indigo-700 text-white font-semibold px-8 py-4 rounded-md hover:bg-brand-secondary transition-all text-lg shadow-lg">
                             Contact Me on WhatsApp
                         </a>
                     </div>
