--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                     <h3 class="text-sm font-semibold text-indigo-600 uppercase">FOUNDATIONS</h3>
                     <p class="text-2xl font-bold text-gray-900 mt-2">SD 101: Strategic Dialogue™ Foundations</p>
                     <p class="mt-4 text-gray-600 flex-grow">The essential starting point for all employees. This workshop establishes a universal language for clear, objective, and productive communication using the <strong>DISA™ Framework</strong>.</p>
+                    <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
                     <!-- Update href="#" to your desired link -->
                     <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
                 </div>
@@ -189,6 +190,7 @@
                     <h3 class="text-sm font-semibold text-indigo-600 uppercase">LEADERSHIP</h3>
                     <p class="text-2xl font-bold text-gray-900 mt-2">SD 201: Strategic Dialogue™ for Leaders</p>
                     <p class="mt-4 text-gray-600 flex-grow">Equips managers and leaders with advanced applications of DISA™ for performance management, team alignment, conflict mediation, and leading organizational change.</p>
+                    <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
                     <!-- Update href="#" to your desired link -->
                     <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
                 </div>
@@ -198,6 +200,7 @@
                     <h3 class="text-sm font-semibold text-indigo-600 uppercase">MASTERY</h3>
                     <p class="text-2xl font-bold text-gray-900 mt-2">SD 301: Strategic Dialogue™ for Coach & Facilitator</p>
                     <p class="mt-4 text-gray-600 flex-grow">A two-day intensive for senior leaders and HR partners to become internal champions, capable of coaching others and facilitating the most complex, high-stakes conversations.</p>
+                    <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
                     <!-- Update href="#" to your desired link -->
                     <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
                 </div>
