--- a/sd.html
+++ b/sd.html
@@ -196,19 +196,22 @@
                         <h3 class="text-sm font-semibold text-brand-primary uppercase">FOUNDATIONS</h3>
                         <p class="text-2xl font-bold text-slate-900 mt-2">SD 101: Strategic Dialogue™ Foundations</p>
                         <p class="mt-4 text-slate-600 flex-grow">The essential starting point for all employees. This workshop establishes a universal language for clear, objective, and productive communication using the <strong>DISA™ Framework</strong>.</p>
-                        <button data-course="sd101" class="open-modal-button mt-8 w-full bg-indigo-700 text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
+                        <div class="mt-6"><span class="inline-block bg-teal-100 text-teal-800 text-sm font-semibold px-3 py-1 rounded-full">HRD Corp Claimable</span></div>
+                        <button data-course="sd101" class="open-modal-button mt-4 w-full bg-indigo-700 text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
                     </div>
                     <div class="border border-slate-200 rounded-xl p-8 flex flex-col">
                         <h3 class="text-sm font-semibold text-brand-primary uppercase">LEADERSHIP</h3>
                         <p class="text-2xl font-bold text-slate-900 mt-2">SD 201: Strategic Dialogue™ for Leaders</p>
                         <p class="mt-4 text-slate-600 flex-grow">Equips managers and leaders with advanced applications of DISA™ for performance management, team alignment, conflict mediation, and leading organizational change.</p>
-                        <button data-course="sd201" class="open-modal-button mt-8 w-full bg-indigo-700 text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
+                        <div class="mt-6"><span class="inline-block bg-teal-100 text-teal-800 text-sm font-semibold px-3 py-1 rounded-full">HRD Corp Claimable</span></div>
+                        <button data-course="sd201" class="open-modal-button mt-4 w-full bg-indigo-700 text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
                     </div>
                     <div class="border border-slate-200 rounded-xl p-8 flex flex-col">
                         <h3 class="text-sm font-semibold text-brand-primary uppercase">MASTERY</h3>
                         <p class="text-2xl font-bold text-slate-900 mt-2">SD 301: Strategic Dialogue™ for Coach & Facilitator</p>
                         <p class="mt-4 text-slate-600 flex-grow">A two-day intensive for senior leaders and HR partners to become internal champions, capable of coaching others and facilitating the most complex, high-stakes conversations.</p>
-                        <button data-course="sd301" class="open-modal-button mt-8 w-full bg-indigo-700 text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
+                        <div class="mt-6"><span class="inline-block bg-teal-100 text-teal-800 text-sm font-semibold px-3 py-1 rounded-full">HRD Corp Claimable</span></div>
+                        <button data-course="sd301" class="open-modal-button mt-4 w-full bg-indigo-700 text-white font-semibold py-3 rounded-lg hover:bg-brand-secondary transition-all">Learn More</button>
                     </div>
                 </div>
             </div>
