--- a/about.html
+++ b/about.html
@@ -304,7 +304,7 @@
             </div>
             <div class="grid md:grid-cols-3 gap-8 text-center">
                 <div class="bg-white p-6 rounded-xl shadow-lg">
-                    <h3 class="text-2xl font-bold text-amber-700 mb-2">The Pastor</h3>
+                    <h3 class="text-2xl font-bold text-amber-700 mb-2">The Mentor</h3>
                     <p class="text-slate-600">The ethical guide, providing spiritual and empathetic grounding.</p>
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg">
