--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <!-- Programs Section -->
     <section id="programs" class="py-20 swoosh-bg">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center text-gray-900 mb-4">Program Pathways</h2>
+            <h2 class="text-3xl font-bold text-center text-gray-900 mb-4">Signature Programs</h2>
             <p class="text-center text-lg text-gray-600 max-w-3xl mx-auto mb-12">
                 Our modular curriculum is designed to build communication mastery across your entire organization, from foundational skills to advanced leadership coaching.
             </p>
