--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div>
                 <h2 class="text-3xl font-bold text-gray-900 mb-4">Who is Elijah?</h2>
                 <p class="text-gray-600 mb-4">Elijah Ting is a corporate trainer who helps organizations solve their most expensive problems—the ones caused by unclear communication.</p>
-                <p class="text-gray-600 mb-6">He is the developer of Strategic Dialogue™, a system that enhances leadership impact by equipping teams with the powerful DISA™ Framework for driving performance and accountability.</p>
+                <p class="text-gray-600 mb-6">He has developed Strategic Dialogue™, a system that enhances leadership impact by equipping teams with the powerful DISA™ Framework for driving performance and accountability.</p>
                 <a href="about.html" class="inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-900 transition duration-300 shadow-md">Read My Full Bio</a>
             </div>
         </div>
