--- a/index.html
+++ b/index.html
@@ -168,41 +168,68 @@
     </section>
     
     <!-- Programs Section -->
-    <section id="programs" class="py-20 swoosh-bg">
+    <section id="programs" class="py-20 bg-gray-50">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-center text-gray-900 mb-4">Signature Programs</h2>
             <p class="text-center text-lg text-gray-600 max-w-3xl mx-auto mb-12">
                 Our modular curriculum is designed to build communication mastery across your entire organization, from foundational skills to advanced leadership coaching.
             </p>
-            <div class="grid lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
-                <!-- SD 101: Foundations -->
-                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                    <h3 class="text-sm font-semibold text-indigo-600 uppercase">FOUNDATIONS</h3>
-                    <p class="text-2xl font-bold text-gray-900 mt-2">SD 101: Strategic Dialogue™ Foundations</p>
-                    <p class="mt-4 text-gray-600 flex-grow">The essential starting point for all employees. This workshop establishes a universal language for clear, objective, and productive communication using the <strong>DISA™ Framework</strong>.</p>
-                    <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
-                    <!-- Update href="#" to your desired link -->
-                    <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+            <div class="space-y-16">
+
+                <!-- Program 1: Foundations -->
+                <div class="flex flex-col md:flex-row items-center bg-white p-8 rounded-lg shadow-lg overflow-hidden">
+                    <div class="md:w-1/2">
+                        <img src="https://placehold.co/600x400/6366f1/e0e7ff?text=Foundations" alt="Strategic Dialogue Foundations" class="rounded-lg">
+                    </div>
+                    <div class="md:w-1/2 md:pl-12 mt-8 md:mt-0">
+                        <h3 class="text-sm font-semibold text-indigo-600 uppercase">FOUNDATIONS</h3>
+                        <p class="text-2xl font-bold text-gray-900 mt-2">SD 101: Strategic Dialogue™ Foundations</p>
+                        <p class="mt-4 text-gray-600">The essential starting point for all employees. This workshop establishes a universal language for clear, objective, and productive communication using the <strong>DISA™ Framework</strong>.</p>
+                        <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
+                        <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                    </div>
                 </div>
 
-                <!-- SD 201: Leadership -->
-                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                    <h3 class="text-sm font-semibold text-indigo-600 uppercase">LEADERSHIP</h3>
-                    <p class="text-2xl font-bold text-gray-900 mt-2">SD 201: Strategic Dialogue™ for Leaders</p>
-                    <p class="mt-4 text-gray-600 flex-grow">Equips managers and leaders with advanced applications of DISA™ for performance management, team alignment, conflict mediation, and leading organizational change.</p>
-                    <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
-                    <!-- Update href="#" to your desired link -->
-                    <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                <!-- Program 2: Leadership -->
+                <div class="flex flex-col md:flex-row-reverse items-center bg-white p-8 rounded-lg shadow-lg overflow-hidden">
+                    <div class="md:w-1/2">
+                        <img src="https://placehold.co/600x400/34d399/e0e7ff?text=Leadership" alt="Strategic Dialogue for Leaders" class="rounded-lg">
+                    </div>
+                    <div class="md:w-1/2 md:pr-12 mt-8 md:mt-0">
+                        <h3 class="text-sm font-semibold text-indigo-600 uppercase">LEADERSHIP</h3>
+                        <p class="text-2xl font-bold text-gray-900 mt-2">SD 201: Strategic Dialogue™ for Leaders</p>
+                        <p class="mt-4 text-gray-600">Equips managers and leaders with advanced applications of DISA™ for performance management, team alignment, conflict mediation, and leading organizational change.</p>
+                        <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
+                        <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                    </div>
                 </div>
 
-                <!-- SD 301: Mastery -->
-                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                    <h3 class="text-sm font-semibold text-indigo-600 uppercase">MASTERY</h3>
-                    <p class="text-2xl font-bold text-gray-900 mt-2">SD 301: Strategic Dialogue™ for Coach & Facilitator</p>
-                    <p class="mt-4 text-gray-600 flex-grow">A two-day intensive for senior leaders and HR partners to become internal champions, capable of coaching others and facilitating the most complex, high-stakes conversations.</p>
-                    <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
-                    <!-- Update href="#" to your desired link -->
-                    <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                <!-- Program 3: Mastery -->
+                <div class="flex flex-col md:flex-row items-center bg-white p-8 rounded-lg shadow-lg overflow-hidden">
+                    <div class="md:w-1/2">
+                        <img src="https://placehold.co/600x400/f59e0b/e0e7ff?text=Mastery" alt="Strategic Dialogue for Coach & Facilitator" class="rounded-lg">
+                    </div>
+                    <div class="md:w-1/2 md:pl-12 mt-8 md:mt-0">
+                        <h3 class="text-sm font-semibold text-indigo-600 uppercase">MASTERY</h3>
+                        <p class="text-2xl font-bold text-gray-900 mt-2">SD 301: Strategic Dialogue™ for Coach & Facilitator</p>
+                        <p class="mt-4 text-gray-600">A two-day intensive for senior leaders and HR partners to become internal champions, capable of coaching others and facilitating the most complex, high-stakes conversations.</p>
+                        <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
+                        <a href="sd.html" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                    </div>
+                </div>
+                
+                <!-- Program 4: Communication -->
+                <div class="flex flex-col md:flex-row-reverse items-center bg-white p-8 rounded-lg shadow-lg overflow-hidden">
+                    <div class="md:w-1/2">
+                        <img src="https://placehold.co/600x400/8b5cf6/e0e7ff?text=Communication" alt="The Art of Connection" class="rounded-lg">
+                    </div>
+                    <div class="md:w-1/2 md:pr-12 mt-8 md:mt-0">
+                        <h3 class="text-sm font-semibold text-indigo-600 uppercase">COMMUNICATION</h3>
+                        <p class="text-2xl font-bold text-gray-900 mt-2">The Art of Connection</p>
+                        <p class="mt-4 text-gray-600">A transformative program designed to equip professionals with the essential communication skills to foster empathy, understanding, and collaboration.</p>
+                        <div class="mt-4"><span class="inline-block bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded-full">HRD Corp Claimable</span></div>
+                        <a href="https://elijah.ac/aoc" class="mt-8 inline-block text-indigo-900 font-semibold hover:underline">Learn More &rarr;</a>
+                    </div>
                 </div>
             </div>
         </div>
