--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     
     <!-- Programs Section -->
    <section id="services" class="py-20 px-6 bg-gray-50"> <div class="container mx-auto max-w-6xl">
-        <h2 class="text-center text-4xl font-bold text-gray-900 mb-4">Our Courses</h2> <p class="text-center text-2xl text-gray-900 mb-16"> <span class="font-bold">Strategic Dialogue™ Professional Development</span>
+        <h2 class="text-center text-4xl font-bold text-gray-900 mb-4">Signature Programs</h2> <p class="text-center text-2xl text-gray-900 mb-16"> <span class="font-bold">Strategic Dialogue™ Professional Development</span>
         </p>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <a href="https://elijah.ac/sd" target="_blank" rel="noopener noreferrer" class="block bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300"> <div class="flex items-center justify-between space-x-3 mb-4">
