--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="container mx-auto px-6">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="flex justify-center">
-                        <img src="assets/images/profile-photo.JPG" alt="Corporate team looking disengaged in a meeting" class="rounded-2xl object-cover shadow-2xl w-full h-full max-h-[450px]"> 
+                        <img src="assets/images/profile-photo.jpg" alt="Corporate team looking disengaged in a meeting" class="rounded-2xl object-cover shadow-2xl w-full h-full max-h-[450px]"> 
                     </div>
                     <div>
                         <h2 class="text-3xl font-bold text-slate-900 mb-4">The High Cost of Poor Communication</h2>
@@ -135,7 +135,7 @@
             <div class="container mx-auto px-6">
                  <div class="grid md:grid-cols-5 gap-12 items-center">
                     <div class="md:col-span-2 flex justify-center">
-                        <img src="assets/images/profile-photo-2.JPG" alt="Portrait of Elijah Ting, Corporate Trainer" class="w-64 h-64 rounded-full object-cover shadow-2xl ring-4 ring-slate-700"> 
+                        <img src="assets/images/profile-photo-1.jpg" alt="Portrait of Elijah Ting, Corporate Trainer" class="w-64 h-64 rounded-full object-cover shadow-2xl ring-4 ring-slate-700"> 
                     </div>
                     <div class="md:col-span-3">
                         <h2 class="text-3xl font-bold mb-4">Meet Your Guide: Elijah Ting</h2>
