Update favicon for index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elijah Ting | Corporate Training | The Art of Connection</title>
     <!-- Favicon Links -->
-    <link rel="icon" type="image/png" href="https://placehold.co/96x96/1e3a8a/ffffff?text=ET" sizes="96x96" />
-    <link rel="shortcut icon" href="https://placehold.co/32x32/1e3a8a/ffffff?text=ET" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://placehold.co/180x180/1e3a8a/ffffff?text=ET" />
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicons/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+    <link rel="manifest" href="/assets/favicons/site.webmanifest" />
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
